# manju-studio

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  PROJECT_STATUS.md  SUMMARY.md  app.py  config.yaml  pipeline.py  pyproject.toml  setup.sh
manju/: __init__.py  config.py
manju/llm/: llm_client.py  prompt_templates.py
manju/schemas/: __init__.py  project.py  story.py
manju/story_engine/: __init__.py  expander.py  scriptwriter.py  shot_generator.py
manju/tts/: __init__.py  engine.py
manju/video/: __init__.py  compositor.py  effects.py  interpolator.py
manju/visual/: __init__.py  cache.py  prompt_gen.py  tongyi_client.py
scripts/: download_bgm.sh
tests/: test_story_engine.py  test_tts.py  test_video.py  test_visual.py
